@@ -1,9 +1,6 @@
 package de.adorsys.xs2a.adapter.http;
 
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
 
 public abstract class UriBuilder {
 
@@ -12,14 +9,7 @@ public abstract class UriBuilder {
     }
 
     public static UriBuilder fromUri(String baseUri) {
-        try {
-            URL url = new URL(baseUri);
-            URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(),
-                url.getPath(), url.getQuery(), url.getRef());
-            return new ApacheUriBuilder(uri);
-        } catch (MalformedURLException | URISyntaxException e) {
-            throw new IllegalArgumentException(baseUri);
-        }
+        return new ApacheUriBuilder(URI.create(baseUri));
     }
 
     public abstract UriBuilder queryParam(String name, String value);
